# jemalloc

./: .appveyor.yml  .bazelrc  .cirrus.yml  .clang-format  .git-blame-ignore-revs  .gitignore  .hgignore  .travis.yml  BUILD.bazel  CMakeLists.txt  COPYING  ChangeLog  INSTALL  INSTALL.md  INTERNALS.md  MODULE.bazel  Makefile  Makefile.in  README  README.md  TERMINOLOGY.md  TUNING.md  Utilities.cmake  VERSION  autogen.sh  config.status  config.sub  configure  configure.ac  configure.ac.orig  jemalloc.pc  jemalloc.pc.in
doc/: jemalloc.xml.in  stylesheet.xsl
examples/: BUILD.bazel  MODULE.bazel  test_api.c  test_basic.c  transition_settings.bzl
include/jemalloc/: BUILD.bazel  jemalloc.h  jemalloc.h.in  jemalloc.sh  jemalloc_defs.h  jemalloc_defs.h.in  jemalloc_hdr.bzl  jemalloc_hdr_gen.cc  jemalloc_macros.h  jemalloc_macros.h.in  jemalloc_mangle.h  jemalloc_mangle.h.in  jemalloc_mangle_jet.h  jemalloc_protos.h  jemalloc_protos.h.in  jemalloc_protos_jet.h  jemalloc_rename.h  jemalloc_typedefs.h.in
include/jemalloc/internal/: BUILD.bazel  activity_callback.h  alloc_ctx.h  arena.h  arena_externs.h  arena_inlines_a.h  arena_inlines_b.h  arena_stats.h  arena_structs.h  arena_structs_a.h  arena_structs_b.h  arena_types.h  arenas_management.h  assert.h  atomic.h  atomic_c11.h  atomic_externs.h  atomic_gcc_atomic.h  atomic_gcc_sync.h  atomic_inlines.h  atomic_msvc.h  background_thread_externs.h  background_thread_inlines.h  background_thread_structs.h  base.h  base_externs.h  base_inlines.h  base_structs.h  base_types.h  batcher.h  bin.h  bin_info.h  bin_inlines.h  bin_stats.h  bit_util.h  bitmap.h  bitmap_externs.h  bitmap_inlines.h  bitmap_structs.h  bitmap_types.h  (+204 more)
jemalloc/: COPYING  ChangeLog  INSTALL  Makefile.in  README  configure.ac
jemalloc/doc/: jemalloc.3  jemalloc.3.in  jemalloc.xml.in
jemalloc/include/jemalloc/: jemalloc.h.in  jemalloc_defs.h.in
jemalloc/include/jemalloc/internal/: arena.h  atomic.h  bitmap.h  chunk.h  chunk_mmap.h  ctl.h  hash.h  huge.h  jemalloc_internal.h.in  mutex.h  prn.h  prof.h  rb.h  stats.h  tcache.h
jemalloc/src/: arena.c  chunk.c  chunk_mmap.c  chunk_swap.c  ckh.c  ctl.c  extent.c  hash.c  huge.c  jemalloc.c  jemalloc.h  jemalloc.h.in  jemalloc_arena.c  jemalloc_arena.h  jemalloc_base.c  jemalloc_chunk.c  jemalloc_chunk_dss.c  jemalloc_chunk_mmap.c  jemalloc_chunk_swap.c  jemalloc_ctl.c  jemalloc_defs.h.in  jemalloc_extent.c  jemalloc_extent.h  jemalloc_huge.c  jemalloc_huge.h  jemalloc_internal.h  jemalloc_mutex.c  jemalloc_stats.c  jemalloc_stats.h  jemalloc_tcache.c  jemalloc_tcache.h  jemalloc_trace.c  jemtr2mtr.c  mb.c  mtrgraph.c  mtrplay.c  mutex.c  prof.c  ql.h  qr.h  (+4 more)
jemalloc/src/internal/: hash.h  jemalloc_arena.h  jemalloc_base.h  jemalloc_chunk.h  jemalloc_chunk_dss.h  jemalloc_chunk_swap.h  jemalloc_ctl.h  jemalloc_extent.h  jemalloc_internal.h.in  jemalloc_mutex.h  jemalloc_stats.h  jemalloc_tcache.h  jemalloc_trace.h  mb.h  mtrgraph_defs.h.in  mtrplay_defs.h.in  prof.h
jemalloc/test/: allocated.c  allocm.c  bitmap.c  posix_memalign.c  posix_memalign.exp  rallocm.c  thread_arena.c
lib/: jemalloc.exp  jemalloc.ilk  jemalloc.lib
msvc/: ReadMe.txt
scripts/: README_GH_ACTIONS.md  build-jemalloc-ios.sh  build-jemalloc-iossim.sh  build-jemalloc-mac.sh  check-formatting.sh  check_trailing_whitespace.sh  gen_gh_actions.py  gen_run_tests.py  gen_travis.py  run_static_analysis.sh
settings/: BUILD.bazel  config.bzl
settings/compiler/: BUILD.bazel
settings/flags/: BUILD.bazel
settings/platform/: BUILD.bazel
src/: aix_wrapper.c  aix_wrapper.exp  arena.c  arena.d  arena.sym  arena.sym.d  arenas_management.c  background_thread.c  background_thread.d  background_thread.jet.sym  background_thread.sym.d  base.c  base.d  base.sym  base.sym.d  batcher.c  bin.c  bin.d  bin.sym  bin.sym.d  bin_info.c  bin_info.d  bin_info.sym  bin_info.sym.d  bitmap.c  bitmap.d  bitmap.sym.d  buf_writer.c  buf_writer.d  buf_writer.sym  buf_writer.sym.d  cache_bin.c  cache_bin.d  (+241 more)
test/: ALLOCM_ARENA.c  BUILD.bazel  aligned_alloc.c  allocated.c  allocm.c  bitmap.c  jemalloc_test.h.in  mremap.c  null.c  posix_memalign.c  rallocm.c  test.sh.in  thread_arena.c  thread_tcache_enabled.c
test/analyze/: prof_bias.c  rand.c  sizes.c
test/cpp/: basic.cpp
test/include/test/: SFMT-alti.h  SFMT-params.h  SFMT-params11213.h  SFMT-params1279.h  SFMT-params132049.h  SFMT-params19937.h  SFMT-params216091.h  SFMT-params2281.h  SFMT-params4253.h  SFMT-params44497.h  SFMT-params607.h  SFMT-params86243.h  SFMT-sse2.h  SFMT.h  arena_decay.h  arena_util.h  bench.h  bgthd.h  btalloc.h  extent_hooks.h  fork.h  guard.h  jemalloc_test.h.in  jemalloc_test_defs.h.in  math.h  mq.h  mtx.h  nbits.h  san.h  test.h  thd.h  thread.h  timer.h
test/integration/: ALLOCM_ARENA.c  BUILD.bazel  MALLOCX_ARENA.c  aligned_alloc.c  allocated.c  allocm.c  chunk.c  deterministic.c  extent.c  jemalloc_integration.h.in  malloc.c  mallocx.c  mremap.c  overflow.c  posix_memalign.c  rallocm.c  rallocx.c  sdallocx.c  slab_sizes.c  smallocx.c  srallocx.c  thread_arena.c  thread_tcache_enabled.c  xallocx.c
test/integration/cpp/: basic.cpp  infallible_new_false.cpp  infallible_new_true.cpp
test/src/: SFMT.c  btalloc.c  mq.c  mtx.c  sleep.c  test.c  thd.c  thread.c  timer.c
test/stress/: batch_alloc.c  fill_flush.c  hookbench.c  large_microbench.c  mallctl.c  microbench.c  sizes.c
test/stress/cpp/: microbench.cpp
test/stress/pa/: .gitignore  README.md  pa_data_preprocessor.cpp  pa_microbench.c
test/stress/pa/data/: .gitignore
test/unit/: BUILD.bazel  SFMT.c  a0.c  arena_decay.c  arena_decay.sh  arena_reset.c  arena_reset_prof.c  arena_reset_prof.sh  arenas_management.c  atomic.c  background_thread.c  background_thread_enable.c  background_thread_init.c  base.c  batch_alloc.c  batcher.c  bin.c  bin_batching.c  bin_batching.sh  binshard.c  binshard.sh  bit_util.c  bitmap.c  buf_writer.c  cache_bin.c  ccache.c  ccache.sh  ckh.c  conf.c  conf_init_0.c  conf_init_1.c  conf_init_confirm.c  conf_parse.c  counter.c  decay.c  decay.sh  div.c  double_free.c  edata_cache.c  emitter.c  (+133 more)
(+28 files in other folders)
